@@ -2,7 +2,7 @@ name    = Benchmark-Apps
 author  = Alberto Simões <ambs@cpan.org> 
 author  = Nuno Carvalho <smash@cpan.org>
 license = Perl_5
-copyright_holder = Projecto Natura
+copyright_holder = Projecto Natura <natura@natura.di.uminho.pt>
 copyright_year   = 2014 - 2017
 
 version = 0.05
@@ -30,4 +30,6 @@ repository.type = git
 
 [ ReadmeAnyFromPod / MarkdownInRoot ]
 filename = README.md
+
+[PodWeaver]
 
