@@ -1,89 +1,10 @@
 package Benchmark::Apps;
+# ABSTRACT: simple interface to benchmark applications.
 
 use warnings;
 use strict;
 
 use Time::HiRes qw.gettimeofday tv_interval.;
-
-=head1 NAME
-
-=encoding UTF-8
-
-Benchmark::Apps - Simple interface to benchmark applications.
-
-=head1 SYNOPSIS
-
-This module provides a simple interface to benchmark applications (not
-necessarily Perl applications).
-
-  use Benchmark::Apps;
-
-  my $commands = {
-       cmd1 => 'run_command_1 with arguments',
-       cmd2 => 'run_command_2 with other arguments',
-     };
-
-  my $conf = { pretty_print=>1, iters=>5 };
-
-  Benchmark::Apps::run( $commands, $conf );
-
-=head1 DESCRIPTION
-
-This module can be used to perform simple benchmarks on programs. Basically,
-it can be used to benchmark any program that can be called with a system
-call.
-
-=head1 FUNCTIONS
-
-=head2 run
-
-This method is used to run benchmarks. It runs the commands described in 
-the hash passed as argument. It returns an hash of the results each command.
-A second hash reference can be passed to this method: a configuration
-hash reference. The values passed in this hash override the default
-behaviour of the run method. The configuration options available at this
-moment are:
-
-=over 4
-
-=item C<pretty_print>
-
-When enabled it will print to stdout, in a formatted way the results
-of the benchmarks as they finish running. This option should de used
-when you want to run benchmarks and want to see the results progress
-as the tests run. You can disable it, so you can perform automated
-benchmarks.
-
-Options: true (1) or false (0)
-
-Default: false (0)
-
-=item C<iters>
-
-This is the number of iterations that each test will run.
-
-Options: integer greater than 1
-
-Default: 5
-
-=item C<args>
-
-This is a reference to an anonymous function that will calculate the
-command argument based on the iteraction number.
-
-Options: any function reference that returns a string
-
-Default: empty function: always returns an empty string, which means no
-arguments will be given to the command
-
-=back
-
-=head2 run
-
-This method runs the commands described in the hash passed as argument.
-It returns an hash of the results and return codes for each command.
-
-=cut
 
 sub _empty { '' }
 
@@ -135,13 +56,6 @@ sub _validate_option {
 	return 1;
 }
 
-=head2 pretty_print
-
-This method is used to print the final result to STDOUT before returning 
-from the C<run> method.
-
-=cut
-
 sub pretty_print {
 	my $self = shift;
 
@@ -159,14 +73,6 @@ sub _show_iter {
 	printf "%d%s iteration:\n", $i, $i==1?"st":$i==2?"nd":$i==3?"rd":"th";
 }
 
-=head2 time_this
-
-This method is not meant to be used directly, although it can be useful.
-It receives a command line and executes it via system, taking care
-of registering the elapsed time.
-
-=cut
-
 sub time_this {
 	my $cmd_line = shift;
 	my $start_time = [gettimeofday];
@@ -174,59 +80,92 @@ sub time_this {
 	return tv_interval($start_time);
 }
 
+1;
+
+__END__
+
+=encoding UTF-8
+
+Benchmark::Apps - Simple interface to benchmark applications.
+
+=head1 SYNOPSIS
+
+This module provides a simple interface to benchmark applications (not
+necessarily Perl applications).
+
+  use Benchmark::Apps;
+
+  my $commands = {
+       cmd1 => 'run_command_1 with arguments',
+       cmd2 => 'run_command_2 with other arguments',
+     };
+
+  my $conf = { pretty_print=>1, iters=>5 };
+
+  Benchmark::Apps::run( $commands, $conf );
+
+=head1 DESCRIPTION
+
+This module can be used to perform simple benchmarks on programs. Basically,
+it can be used to benchmark any program that can be called with a system
+call.
+
+=func run
+
+This function is used to run benchmarks. It runs the commands described in 
+the hash passed as argument. It returns an hash of the results each command.
+A second hash reference can be passed to this function: a configuration
+hash reference. The values passed in this hash override the default
+behaviour of the run function. The configuration options available at this
+moment are:
+
+=over 4
+
+=item C<pretty_print>
+
+When enabled it will print to stdout, in a formatted way the results
+of the benchmarks as they finish running. This option should de used
+when you want to run benchmarks and want to see the results progress
+as the tests run. You can disable it, so you can perform automated
+benchmarks.
+
+Options: true (1) or false (0)
+
+Default: false (0)
+
+=item C<iters>
+
+This is the number of iterations that each test will run.
+
+Options: integer greater than 1
+
+Default: 5
+
+=item C<args>
+
+This is a reference to an anonymous function that will calculate the
+command argument based on the iteraction number.
+
+Options: any function reference that returns a string
+
+Default: empty function: always returns an empty string, which means no
+arguments will be given to the command
+
+=back
+
+=func pretty_print
+
+This function is used to print the final result to STDOUT before returning 
+from the C<run> function.
+
+
+=func time_this
+
+This function is not meant to be used directly, although it can be useful.
+It receives a command line and executes it via system, taking care
+of registering the elapsed time.
 
 =head1 EXAMPLES
 
 Check files in C<examples/>.
 
-=head1 AUTHOR
-
-Aberto Simoes (aka ambs), C<< <ambs at cpan.org> >>
-Nuno Carvalho (aka smash), C<< <smash @ cpan.org> >>
-
-=head1 BUGS
-
-Please report any bugs or feature requests to C<bug-benchmark-apps at rt.cpan.org>, or through
-the web interface at L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Benchmark-Apps>.  I will be notified, and then you'll
-automatically be notified of progress on your bug as I make changes.
-
-=head1 SUPPORT
-
-You can find documentation for this module with the perldoc command.
-
-    perldoc Benchmark::Apps
-
-You can also look for information at:
-
-=over 4
-
-=item * RT: CPAN's request tracker
-
-L<http://rt.cpan.org/NoAuth/Bugs.html?Dist=Benchmark-Apps>
-
-=item * AnnoCPAN: Annotated CPAN documentation
-
-L<http://annocpan.org/dist/Benchmark-Apps>
-
-=item * CPAN Ratings
-
-L<http://cpanratings.perl.org/d/Benchmark-Apps>
-
-=item * Search CPAN
-
-L<http://search.cpan.org/dist/Benchmark-Apps>
-
-=back
-
-=head1 COPYRIGHT & LICENSE
-
-This software is copyright (c) 2014 - 2017 by Nuno Carvalho and Alberto Simões.
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
-
-=cut
-
-!!1; # End of Benchmark::Apps
-
-__END__
