@@ -3,6 +3,7 @@ Revision history for Benchmark-Apps
 0.06    xxx
         - Move repository to github.
         - Update copyright information.
+        - Re-factor documentation.
 
 0.05    2014-09-14
         - Release dzil'ified.
